worked on header part and home component

--- a/src/app/page/side-menu/side-menu.component.html
+++ b/src/app/page/side-menu/side-menu.component.html
@@ -59,7 +59,7 @@
         </li>
        
     </ul>
-    <li  class="nav-item">
+    <!-- <li  class="nav-item">
         <a class="nav-link"  [routerLink]="'/page/viewProfile'">
             <i class="fa fa-user" aria-hidden="true"></i>
              Profile
@@ -71,6 +71,5 @@
         <a class="nav-link" (click)="logout()">
             <i class="fa fa-sign-out" aria-hidden="true"></i>
             Logout</a>
-        <!-- <h3><a class="nav-link"  [routerLink]="'/page/viewProfile'">{{user}}</a></h3> -->
-    </li>
+    </li> -->
 </div>
