--- a/src/assets/sass/style.css
+++ b/src/assets/sass/style.css
@@ -1,3 +1,43 @@
+.header_component {
+  background-color: #fff;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 30px;
+  box-shadow: 0 12px 23px 0 hsla(0deg, 0%, 44%, 0.04);
+  border-bottom: 1px solid #dcdcdc;
+}
+.header_component .search_bar {
+  border: 1px solid rgb(220, 218, 218);
+  border-radius: 4px;
+  width: 370px;
+  display: flex;
+  transition: width 0.4s ease-in-out;
+}
+.header_component .search_bar:focus-within {
+  width: 100% !important;
+  border: 1px solid rgb(144, 134, 241);
+}
+.header_component .search_bar input[type=text] {
+  padding: 10px;
+  font-size: 17px;
+  background: transparent;
+  outline: none;
+  width: 370px;
+  transition: width 0.4s ease-in-out;
+  border: transparent;
+}
+.header_component .search_bar input[type=text]:focus-within {
+  width: 100% !important;
+}
+.header_component .search_bar .icon {
+  padding: 10px;
+  font-size: 17px;
+  cursor: pointer;
+  color: #b3b0b0;
+}
+
 .bg_ice_white {
   background-color: #f1f1f1;
   border-radius: 12px;
@@ -263,6 +303,22 @@ a:hover {
   color: #000 !important;
 }
 
+.main_wapper {
+  height: 100vh;
+  display: flex;
+}
+.main_wapper .inner_container {
+  height: calc(100vh - 10px);
+  overflow: auto;
+}
+.main_wapper .inner_container {
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+.main_wapper .inner_container::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
+
 .card {
   background-color: #ffffff;
   border: 0 solid transparent;
@@ -305,14 +361,14 @@ a:hover {
 }
 
 .side_menu {
-  width: 250px;
+  width: 300px;
   padding-top: 15px;
   list-style-type: none;
   background: #1904E5;
-  height: 100%;
 }
 .side_menu li {
   transition-duration: 0.6s;
+  margin-bottom: 7px;
 }
 .side_menu i {
   padding-right: 12px;
