--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import './header';
 @import './pages/login';
 @import './pages/signup';
 @import './pages/profile';
@@ -19,12 +20,29 @@ a {
     }
 }
 
+.main_wapper{
+    height: 100vh;
+    display: flex;
+    .inner_container{
+        height: calc(100vh - 10px);
+        overflow: auto;
+    }
+
+    .inner_container {
+        -ms-overflow-style: none;  /* Internet Explorer 10+ */
+        scrollbar-width: none;  /* Firefox */
+    }
+    .inner_container::-webkit-scrollbar { 
+        display: none;  /* Safari and Chrome */
+    }
+}
+
+
 .card {
     background-color: $white;
     border: 0 solid transparent;
     border-radius: 1.25rem;
     box-shadow: 0 12px 23px 0 hsl(0deg 0% 44% / 4%);
-    // height: calc(100% - 30px);
     margin-bottom: 1.875rem;
     position: relative;
     transition: all .5s ease-in-out;
@@ -63,14 +81,15 @@ a {
 }
 
 .side_menu {
-    width: 250px;
+    width: 300px;
     padding-top: 15px;
     list-style-type: none;
     background: $blue ;
-    height: 100%;
+    // height: 100%;
 
     li {
         transition-duration: 0.6s;
+        margin-bottom: 7px;
         // &:hover{
         //     background: #5959f0;
         // }
