--- a/src/app/page/mentor-list/mentor-list.component.html
+++ b/src/app/page/mentor-list/mentor-list.component.html
@@ -1,6 +1,7 @@
-<div class="d-flex h-100vh">
+<div class="main_wapper">
   <app-side-menu class="side_menu"></app-side-menu>
-  <div class="w-100 p-4 mt-5">
+  <div class="inner_container">
+    <app-top-header class="header_component"></app-top-header>
     <section class="mentor_list_component">
       <div class="container-fluid">
         <div class="row">
