--- a/src/assets/sass/_header.scss
+++ b/src/assets/sass/_header.scss
@@ -1,6 +1,6 @@
 .header_component {
     background-color: #fff;
-    padding: 20px;
+    padding: 10px 15px;
     display: flex;
     justify-content: space-between;
     align-items: center;
