--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -26,6 +26,7 @@ a {
     .inner_container{
         height: calc(100vh - 10px);
         overflow: auto;
+        width: 100%;
     }
 
     .inner_container {
