--- a/src/app/page/add-user/add-user.component.html
+++ b/src/app/page/add-user/add-user.component.html
@@ -1,7 +1,8 @@
-<div class="d-flex h-100vh">
+<div class="main_wapper">
     <app-side-menu class="side_menu"></app-side-menu>
-    <div class="w-100 p-4 mt-5 profile_component">
-        <div class="container-fluid">
+    <div class="inner_container">
+    <app-top-header class="header_component"></app-top-header>
+        <div class="container-fluid profile_component">
             <div class="row">
                 <div class="col-md-12 card">
                     <div class="card-header-danger">
