--- a/src/assets/sass/style.css
+++ b/src/assets/sass/style.css
@@ -348,6 +348,10 @@ a:hover {
   background-color: #717cbe !important;
 }
 
+table tr td .text-white.mat-mini-fab.mat-button-base:hover {
+  color: #fff !important;
+}
+
 .logo {
   border-bottom: 1px solid #6d61dd;
   padding: 14px;
