working on profile and other components

--- a/src/app/page/author-list/author-list.component.html
+++ b/src/app/page/author-list/author-list.component.html
@@ -32,7 +32,7 @@
                     <td>
                       <a class="text-white" mat-mini-fab color="accent"
                         [routerLink]="['/page/updateUser/'+user.id]">
-                        <mat-icon class="mat-18">system_update</mat-icon>
+                        <mat-icon class="mat-18">create</mat-icon>
                       </a>
                       <a class="ml-3 text-white" mat-mini-fab color="primary">
                         <mat-icon (click)="deleteUser(user.id)" class="mat-18">delete</mat-icon>
