--- a/src/app/page/view-course/view-course.component.html
+++ b/src/app/page/view-course/view-course.component.html
@@ -51,7 +51,7 @@
                     <td *ngIf="check">
                       <a class="text-white" mat-mini-fab color="accent"
                         [routerLink]="['/page/updateCourse/'+course.courseId]">
-                        <mat-icon class="mat-18">system_update</mat-icon>
+                        <mat-icon class="mat-18">create</mat-icon>
                       </a>
     
                       <a class="ml-3 text-white" mat-mini-fab color="primary">
