--- a/src/app/page/mentor-list/mentor-list.component.html
+++ b/src/app/page/mentor-list/mentor-list.component.html
@@ -32,7 +32,7 @@
                     <td>
                       <a class="text-white" mat-mini-fab color="accent" 
                         [routerLink]="['/page/updateUser/'+user.id]">
-                        <mat-icon class="mat-18">system_update</mat-icon>
+                        <mat-icon class="mat-18">create</mat-icon>
                       </a>
                       <!-- <button class="navLink button-style" mat-icon-button color="accent"><mat-icon (click)="updateUser(user.id)"  class="mat-18">system_update</mat-icon></button> -->
                       <a class="ml-3 text-white" mat-mini-fab color="primary">
