--- a/src/app/page/view-profile/view-profile.component.html
+++ b/src/app/page/view-profile/view-profile.component.html
@@ -1,6 +1,7 @@
-<div class="h-100 d-flex">
+<div class="main_wapper">
     <app-side-menu class="side_menu"></app-side-menu>
-    <section class="w-100 p-4 mt-5 profile_component">
+    <section class="inner_container profile_component">
+    <app-top-header class="header_component"></app-top-header>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12 card">
