--- a/src/assets/sass/style.css
+++ b/src/assets/sass/style.css
@@ -10,7 +10,7 @@
 }
 .header_component .search_bar {
   border: 1px solid rgb(220, 218, 218);
-  border-radius: 4px;
+  border-radius: 25px;
   width: 370px;
   display: flex;
   transition: width 0.4s ease-in-out;
@@ -313,11 +313,15 @@ a:hover {
   width: 100%;
 }
 .main_wapper .inner_container {
-  -ms-overflow-style: none; /* Internet Explorer 10+ */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 .main_wapper .inner_container::-webkit-scrollbar {
-  display: none; /* Safari and Chrome */
+  display: none;
+}
+
+table {
+  text-align: center;
 }
 
 .card {
@@ -349,7 +353,7 @@ a:hover {
 }
 
 table tr td .text-white.mat-mini-fab.mat-button-base:hover {
-  color: #fff !important;
+  color: #ffffff !important;
 }
 
 .logo {
