--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -10,7 +10,6 @@
 // define 
 body {
     background-color: #f4f6fa;
-    // height: 100% !important;
 }
 
 a {
@@ -30,15 +29,17 @@ a {
     }
 
     .inner_container {
-        -ms-overflow-style: none;  /* Internet Explorer 10+ */
-        scrollbar-width: none;  /* Firefox */
+        -ms-overflow-style: none; 
+        scrollbar-width: none; 
     }
     .inner_container::-webkit-scrollbar { 
-        display: none;  /* Safari and Chrome */
+        display: none; 
     }
 }
 
-
+table {
+    text-align: center;
+}
 .card {
     background-color: $white;
     border: 0 solid transparent;
@@ -68,10 +69,11 @@ a {
 }
 
 table tr td .text-white.mat-mini-fab.mat-button-base{
-&:hover{
-    color: #fff !important;
+    &:hover{
+        color: $white !important;
+    }
 }
-}
+
 
 .logo {
     border-bottom: 1px solid #6d61dd;
@@ -92,8 +94,6 @@ table tr td .text-white.mat-mini-fab.mat-button-base{
     padding-top: 15px;
     list-style-type: none;
     background: $blue ;
-    // height: 100%;
-
     li {
         transition-duration: 0.6s;
         margin-bottom: 7px;
@@ -115,7 +115,6 @@ table tr td .text-white.mat-mini-fab.mat-button-base{
         letter-spacing: 1.1px;
         transition-duration: .7s;
         cursor: pointer;
-
         &:hover {
             letter-spacing: 1.3px;
         }
@@ -136,7 +135,6 @@ table tr td .text-white.mat-mini-fab.mat-button-base{
     }
 
     .card .card-header-warning {
-        // background: linear-gradient(60deg, #ab47bc, #8e24aa);
         background: linear-gradient(60deg, #8a7ef7, #1904e5);
     }
 
