worked on hover color css

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -41,7 +41,7 @@
                                 <button type="submit" mat-raised-button class="btn btn-block"
                                     color="primary">Login</button>
                                 <p class="text-center mt-1 mb-1">OR</p>
-                                <a class="btn btn-block" mat-raised-button color="accent"
+                                <a class="btn btn-block hover_white_color" mat-raised-button color="accent"
                                     [routerLink]="'/auth/signup'">Sign
                                     Up</a>
                             </div>
