--- a/src/app/page/view-profile/view-profile.component.html
+++ b/src/app/page/view-profile/view-profile.component.html
@@ -17,7 +17,7 @@
                                     <mat-form-field class="form-field" appearance="outline">
                                         <mat-label>Name</mat-label>
                                         <input [(ngModel)]="log_name" minlength="3" name="name" type="text" matInput
-                                            readonly placeholder="Enter Name" />
+                                         placeholder="Enter Name" />
                                     </mat-form-field>
                                 </div>
                                 <div>
@@ -26,59 +26,47 @@
                                         <mat-label>Email</mat-label>
                                         <input [(ngModel)]="log_email" required #email="ngModel" name="email"
                                             type="email" matInput readonly placeholder="Enter Email"
-                                            pattern="[a-zA-Z0-9.-_]{1,}@[a-zA-Z.-]{2,}[.]{1}[a-zA-Z]{2,}">
+                                             readonly>
                                     </mat-form-field>
                                 </div>
                                 <div>
                                     <mat-form-field class="form-field" appearance="outline">
                                         <mat-label>UserName</mat-label>
                                         <input minlength="8" [(ngModel)]="log_useName" required #userName="ngModel"
-                                            name="userName" type="text" matInput placeholder="Enter UserName">
+                                            name="userName" type="text" matInput placeholder="Enter UserName" readonly>
                                     </mat-form-field>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div>
-                                    <mat-form-field class="form-field" appearance="outline">
-                                        <mat-label>Profile</mat-label>
-                                        <input [(ngModel)]="log_profile" #profile="ngModel" name="profile" type="text"
-                                            matInput readonly>
-
-                                    </mat-form-field>
+                                    <select class="form-control"  name="profile" #profile="ngModel" [(ngModel)]="log_profile">
+                                        <option *ngFor="let profile of coursesList" [value]="profile.courseName" [selected]="log_profile === profile.value">
+                                            {{profile.courseName}}
+                                        </option>
+                                    </select>
                                 </div>
                                 <div>
+                                    <!-- <select class="form-control"  name="roles" #roless="ngModel" [(ngModel)]="userRole">
+                                        <option *ngFor="let roleData of roles" [value]="roleData" [selected]="selectedProfile === roleData.roleName">
+                                            {{roleData.roleName}}
+                                        </option>
+                                    </select> -->
                                     <mat-form-field class="form-field" appearance="outline">
                                         <mat-label>Roles</mat-label>
-                                        <mat-select name="roles" #roless="ngModel" [(ngModel)]="log_roles" multiple>
-                                            <mat-option disabled *ngFor="let role of roles" [value]="role.roleName">
+                                        <mat-select name="roles" #roless="ngModel" [(ngModel)]="userRole" multiple>
+                                            <mat-option *ngFor="let role of roles" [value]="role">
                                                 {{role.roleName}}
                                             </mat-option>
                                         </mat-select>
 
                                     </mat-form-field>
-                                    <div *ngIf="roless.touched && roless.invalid" class="alert alert-danger">
-                                        <div *ngIf="roless.errors?.['required']">
-                                            At least one role is required.
-                                        </div>
-                                    </div>
                                 </div>
 
-                                <!-- <div class="">
-                            <div class="mb-4">
-                                <a class="btn btn-block" mat-raised-button color="primary" [routerLink]="'/page/home'">Back to Home</a>
                             </div>
-                        </div> -->
+                            <div class="example-button-row">
+                                <button type="submit" mat-raised-button color="primary">Update Profile</button>
                             </div>
                         </div>
-
-                        <!-- <div>
-                            <mat-form-field class="form-field" appearance="outline">
-                                <mat-label>Password</mat-label> 
-                                <input minlength="8" [(ngModel)]="log_password" required #password="ngModel" name="password" type="password" matInput
-                                    placeholder="Enter Password">
-                            </mat-form-field>
-                           </div> -->
-
                     </form>
                 </div>
             </div>
