commit for add total trainee on dashboard

--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -57,8 +57,8 @@
                <div class="card card-stats">
                   <div class="card-header card-header-i card-header-icon">
                      <div class="card-icon"><i class="material-icons">update</i></div>
-                     <p class="card-category">Followers</p>
-                     <h3 class="card-title">+245</h3>
+                     <p class="card-category">Total Trainee</p>
+                     <h3 class="card-title">{{numberOfTrainee}}</h3>
                   </div>
                   <div class="card-footer">
                      <div class="stats"><i class="material-icons">update</i> Just Updated </div>
