--- a/src/app/page/topic-view/topic-view.component.html
+++ b/src/app/page/topic-view/topic-view.component.html
@@ -1,12 +1,15 @@
-<div class="d-flex h-100vh">
+<div class="main_wapper">
   <app-side-menu class="side_menu"></app-side-menu>
-  <div class="w-100 p-4 mt-5">
-    <div class="container-fluid reused_table_header">
+  <div class="inner_container">
+    <app-top-header class="header_component"></app-top-header>
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-md-12 card">
+        <div class="col-md-12 reused_table_header">
+          <div class="card">
+            
           <div class="card-header card-header-warning">
             <div class="d-flex justify-content-between align-items-center">
-              <h4 class="card-title mb-0 ">Topic List</h4>
+              <h4 class="card-title mb-0">Topic List</h4>
               <div>
                 <a *ngIf="check" mat-raised-button [routerLink]="'/page/topic'">Add Topic</a>
               </div>
@@ -27,7 +30,12 @@
               <tbody>
                 <tr *ngFor="let topic of topics">
                   <td>{{topic.id}}</td>
-                  <td><a class="navLink ml-5" [routerLink]="['/page/subTopicView/'+topic.id]">{{topic.topicName}}</a>
+                  <td>
+                    <a class="navLink mr-1" [routerLink]="['/page/subTopicView/'+topic.id]">
+                      <span class="p-2 pl-0 text-center badge badge-info">
+                        {{topic.topicName}}
+                      </span>
+                    </a>
                   </td>
                   <td>{{topic.course.courseName}}</td>
                   <td>
@@ -46,17 +54,19 @@
                     </div>
                   </td>
                   <td *ngIf="check">
-                    <a class="navLink ml-5" mat-icon-button color="accent" [routerLink]="'/page/updateTopic/'+topic.id">
+                    <a class="text-white" mat-mini-fab color="accent" [routerLink]="'/page/updateTopic/'+topic.id">
                       <mat-icon class="mat-18">system_update</mat-icon>
                     </a>
-                    <button class="navLink button-style" mat-icon-button color="warn">
+                    <a class="ml-3 text-white" mat-mini-fab color="primary">
                       <mat-icon (click)="deleteTopic(topic.id)" class="mat-18">delete</mat-icon>
-                    </button>
+                    </a>
                   </td>
                 </tr>
               </tbody>
             </table>
           </div>
+
+        </div>
         </div>
       </div>
     </div>
