--- a/src/app/page/question-view/question-view.component.html
+++ b/src/app/page/question-view/question-view.component.html
@@ -6,54 +6,52 @@
                   <div class="row">
                         <div class="col-md-12 reused_table_header">
                               <div class="card">
-
                                     <div class="card-header card-header-warning">
                                           <div class="d-flex justify-content-between align-items-center">
                                                 <h4 class="card-title mb-0">Questions Table</h4>
                                                 <div>
-                                                <a *ngIf="check" class="navLink mr-1" mat-raised-button color="primary"
-                                                [routerLink]="'/page/question'">
-                                                Add Questions</a>
+                                                      <a *ngIf="check" class="navLink mr-1" mat-raised-button
+                                                             [routerLink]="'/page/question'">
+                                                            Add Questions</a>
 
-                                                 <a  mat-raised-button (click)="backButton()">Back To SubTopic</a>
+                                                      <a mat-raised-button (click)="backButton()">Back To SubTopic</a>
                                                 </div>
                                           </div>
                                     </div>
 
-                                    
-                              <table class="table table-hover">
-                                    <thead>
-                                          <tr>
-                                                <th>Question Id</th>
-                                                <th>Question</th>
-                                                <th>Sub Topic</th>
-                                                <th>Topic</th>
-                                                <th *ngIf="check">Actions</th>
-                                          </tr>
-                                    </thead>
-                                    <tbody>
-                                          <tr *ngFor="let question of questions">
-                                                <td>{{question.id}}</td>
-                                                <!-- <td><a  class="navLink ml-5" [routerLink]="''">{{question.question}}</a></td> -->
-                                                <td>{{question.question}}</td>
-                                                <td>{{question.subTopic.subTopicName}}</td>
-                                                <td>{{question.subTopic.topic.topicName}}</td>
-                                                <td *ngIf="check">
-                                                      <a class="navLink ml-5" mat-icon-button color="accent"
-                                                            [routerLink]="'/page/updateQuestion/'+question.id">
-                                                            <mat-icon class="mat-18">system_update</mat-icon>
-                                                      </a>
-                                                      <button class="navLink button-style" mat-icon-button color="warn">
-                                                            <mat-icon (click)="deleteQuestion(question.id)"
-                                                                  class="mat-18">delete</mat-icon>
-                                                      </button>
-                                                </td>
-                                          </tr>
-                                    </tbody>
-                              </table>
-                              </div>
 
-                             
+                                    <table class="table table-hover">
+                                          <thead>
+                                                <tr>
+                                                      <th>Question Id</th>
+                                                      <th>Question</th>
+                                                      <th>Sub Topic</th>
+                                                      <th>Topic</th>
+                                                      <th *ngIf="check">Actions</th>
+                                                </tr>
+                                          </thead>
+                                          <tbody>
+                                                <tr *ngFor="let question of questions">
+                                                      <td>{{question.id}}</td>
+                                                      <!-- <td><a  class="navLink ml-5" [routerLink]="''">{{question.question}}</a></td> -->
+                                                      <td>{{question.question}}</td>
+                                                      <td>{{question.subTopic.subTopicName}}</td>
+                                                      <td>{{question.subTopic.topic.topicName}}</td>
+                                                      <td *ngIf="check">
+                                                            <a class="navLink ml-5" mat-icon-button color="accent"
+                                                                  [routerLink]="'/page/updateQuestion/'+question.id">
+                                                                  <mat-icon class="mat-18">system_update</mat-icon>
+                                                            </a>
+                                                            <button class="navLink button-style" mat-icon-button
+                                                                  color="warn">
+                                                                  <mat-icon (click)="deleteQuestion(question.id)"
+                                                                        class="mat-18">delete</mat-icon>
+                                                            </button>
+                                                      </td>
+                                                </tr>
+                                          </tbody>
+                                    </table>
+                              </div>
                         </div>
                   </div>
             </div>
