--- a/src/app/page/side-menu/side-menu.component.html
+++ b/src/app/page/side-menu/side-menu.component.html
@@ -53,8 +53,10 @@
                 <i class="fa fa-book" aria-hidden="true"></i>
                 View Courses</a>
         </li>
-        <li *ngSwitchCase="'ROLE_TRAINEE'" class="nav-item">
-            <a class="nav-link" [routerLink]="['/page/performQuestion/'+courseName]"> Perform
+        <li *ngSwitchCase="'ROLE_TRAINEE'" class="nav-item pl-1">
+            <a class="nav-link" [routerLink]="['/page/performQuestion/'+courseName]">
+                <i class="fa fa-question" aria-hidden="true"></i> 
+                Perform
                 questions</a>
         </li>
        
