--- a/src/app/page/update-user-data/update-user-data.component.html
+++ b/src/app/page/update-user-data/update-user-data.component.html
@@ -1,49 +1,73 @@
+<div class="main_wapper">
+    <app-side-menu class="side_menu"></app-side-menu>
+    <section class="inner_container profile_component">
+    <app-top-header class="header_component"></app-top-header>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header-danger">
+                        <h4 class="mb-1">Update user</h4>
+                    </div>
 
-<div class="container">
-           <h4>Update User</h4>
-<form #updateUserForm="ngForm" (ngSubmit)="updateUser(updateUserForm.value)">
-           <div>
-                      <mat-form-field class="form-field" appearance="outline">
-                          <mat-label>Name</mat-label>
-                          <input [(ngModel)]="log_name" minlength="3" name="name" type="text" matInput
-                           placeholder="Enter Name" />
-                      </mat-form-field>
-           </div>
-           <div>
-                      <mat-form-field class="form-field" appearance="outline">
-                                 <mat-label>Email</mat-label>
-                                 <input [(ngModel)]="log_email" required #email="ngModel" name="email"
-                                     type="email" matInput readonly placeholder="Enter Email"
-                                      readonly>
-                      </mat-form-field>
-           </div>
-           <div>
-                      <mat-form-field class="form-field" appearance="outline">
-                          <mat-label>UserName</mat-label>
-                          <input minlength="8" [(ngModel)]="log_useName" required #userName="ngModel"
-                              name="userName" type="text" matInput placeholder="Enter UserName" readonly>
-                      </mat-form-field>
-           </div>
-           <div>
-                      <select class="form-control"  name="profile" #profile="ngModel" [(ngModel)]="log_profile">
-                          <option *ngFor="let profile of coursesList" [value]="profile.courseName" [selected]="log_profile === profile.value">
-                              {{profile.courseName}}
-                          </option>
-                      </select>
-           </div>
-           <div>
-                      <mat-form-field class="form-field" appearance="outline">
-                                 <mat-label>Roles</mat-label>
-                                 <mat-select name="roles" #roless="ngModel" [(ngModel)]="userRole" multiple>
-                                     <mat-option *ngFor="let role of roles" [value]="role">
-                                         {{role.roleName}}
-                                     </mat-option>
-                                 </mat-select>
-
-                      </mat-form-field>
-           </div>
-           <div>
-                      <button type="submit" mat-raised-button color="primary">Update User</button>
-           </div>
-</form>
+                    <div>
+                        <form #updateUserForm="ngForm" (ngSubmit)="updateUser(updateUserForm.value)">
+                            <div class="row px-3">
+                                <div class="col-md-6">
+                                    <div>
+                                        <mat-form-field class="form-field" appearance="outline">
+                                            <mat-label>Name</mat-label>
+                                            <input [(ngModel)]="log_name" minlength="3" name="name" type="text" matInput placeholder="Enter Name" />
+                                        </mat-form-field>
+                                    </div>
+                                    <div>
+                                        <mat-form-field class="form-field" appearance="outline">
+                                            <mat-label>Email</mat-label>
+                                            <input [(ngModel)]="log_email" required #email="ngModel" name="email" type="email" matInput readonly
+                                                placeholder="Enter Email" readonly>
+                                        </mat-form-field>
+                                    </div>
+                                    <div>
+                                        <mat-form-field class="form-field" appearance="outline">
+                                            <mat-label>UserName</mat-label>
+                                            <input minlength="8" [(ngModel)]="log_useName" required #userName="ngModel" name="userName" type="text"
+                                                matInput placeholder="Enter UserName" readonly>
+                                        </mat-form-field>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    
+                            <div class="form-group">
+                                <select class="form-control" name="profile" #profile="ngModel" [(ngModel)]="log_profile">
+                                    <option *ngFor="let profile of coursesList" [value]="profile.courseName"
+                                        [selected]="log_profile === profile.value">
+                                        {{profile.courseName}}
+                                    </option>
+                                </select>
+                            </div>
+                            <div>
+                                <mat-form-field class="form-field" appearance="outline">
+                                    <mat-label>Roles</mat-label>
+                                    <mat-select name="roles" #roless="ngModel" [(ngModel)]="userRole" multiple>
+                                        <mat-option *ngFor="let role of roles" [value]="role">
+                                            {{role.roleName}}
+                                        </mat-option>
+                                    </mat-select>
+                    
+                                </mat-form-field>
+                            </div>
+                            <div>
+                                <button type="submit" class="d-block btn w-100" mat-raised-button color="primary">Update User</button>
+                            </div>
+                                </div>
+                            </div>
+                           
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+    </div>
+    </section>
 </div>
