--- a/src/app/page/view-profile/view-profile.component.html
+++ b/src/app/page/view-profile/view-profile.component.html
@@ -4,70 +4,69 @@
     <app-top-header class="header_component"></app-top-header>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12 card">
-                    <div class="card-header-danger">
-                        <h4 class="mb-1">View Profile</h4>
-                        <p class="mb-0">Complete your profile</p>
-                    </div>
-                    <form #profileForm="ngForm" (ngSubmit)="updateProfile(profileForm.value)">
-
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div>
-                                    <mat-form-field class="form-field" appearance="outline">
-                                        <mat-label>Name</mat-label>
-                                        <input [(ngModel)]="log_name" minlength="3" name="name" type="text" matInput
-                                         placeholder="Enter Name" />
-                                    </mat-form-field>
-                                </div>
-                                <div>
-
-                                    <mat-form-field class="form-field" appearance="outline">
-                                        <mat-label>Email</mat-label>
-                                        <input [(ngModel)]="log_email" required #email="ngModel" name="email"
-                                            type="email" matInput readonly placeholder="Enter Email"
-                                             readonly>
-                                    </mat-form-field>
-                                </div>
-                                <div>
-                                    <mat-form-field class="form-field" appearance="outline">
-                                        <mat-label>UserName</mat-label>
-                                        <input minlength="8" [(ngModel)]="log_useName" required #userName="ngModel"
-                                            name="userName" type="text" matInput placeholder="Enter UserName" readonly>
-                                    </mat-form-field>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div>
-                                    <select class="form-control"  name="profile" #profile="ngModel" [(ngModel)]="log_profile">
-                                        <option *ngFor="let profile of coursesList" [value]="profile.courseName" [selected]="log_profile === profile.value">
-                                            {{profile.courseName}}
-                                        </option>
-                                    </select>
-                                </div>
-                                <div>
-                                    <!-- <select class="form-control"  name="roles" #roless="ngModel" [(ngModel)]="userRole">
-                                        <option *ngFor="let roleData of roles" [value]="roleData" [selected]="selectedProfile === roleData.roleName">
-                                            {{roleData.roleName}}
-                                        </option>
-                                    </select> -->
-                                    <mat-form-field class="form-field" appearance="outline">
-                                        <mat-label>Roles</mat-label>
-                                        <mat-select name="roles" #roless="ngModel" [(ngModel)]="userRole" multiple>
-                                            <mat-option *ngFor="let role of roles" [value]="role">
-                                                {{role.roleName}}
-                                            </mat-option>
-                                        </mat-select>
-
-                                    </mat-form-field>
-                                </div>
-
-                            </div>
-                            <div class="example-button-row">
-                                <button type="submit" mat-raised-button color="primary">Update Profile</button>
-                            </div>
+                <div class="col-md-12">
+                    <div class="card">
+                        <div class="card-header-danger">
+                            <h4 class="mb-1">View Profile</h4>
+                            <p class="mb-0">Complete your profile</p>
                         </div>
-                    </form>
+                        <form #profileForm="ngForm" (ngSubmit)="updateProfile(profileForm.value)">
+    
+                            <div class="row px-3">
+                                <div class="col-md-6">
+                                    <div>
+                                        <mat-form-field class="form-field" appearance="outline">
+                                            <mat-label>Name</mat-label>
+                                            <input [(ngModel)]="log_name" minlength="3" name="name" type="text" matInput
+                                             placeholder="Enter Name" />
+                                        </mat-form-field>
+                                    </div>
+                                    <div>
+                                        <mat-form-field class="form-field" appearance="outline">
+                                            <mat-label>Email</mat-label>
+                                            <input [(ngModel)]="log_email" required #email="ngModel" name="email"
+                                                type="email" matInput readonly placeholder="Enter Email"
+                                                 readonly>
+                                        </mat-form-field>
+                                    </div>
+                                    <div>
+                                        <mat-form-field class="form-field" appearance="outline">
+                                            <mat-label>UserName</mat-label>
+                                            <input minlength="8" [(ngModel)]="log_useName" required #userName="ngModel"
+                                                name="userName" type="text" matInput placeholder="Enter UserName" readonly>
+                                        </mat-form-field>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <select class="form-control"  name="profile" #profile="ngModel" [(ngModel)]="log_profile">
+                                            <option *ngFor="let profile of coursesList" [value]="profile.courseName" [selected]="log_profile === profile.value">
+                                                {{profile.courseName}}
+                                            </option>
+                                        </select>
+                                    </div>
+                                    <div>
+                                        <!-- <select class="form-control"  name="roles" #roless="ngModel" [(ngModel)]="userRole">
+                                            <option *ngFor="let roleData of roles" [value]="roleData" [selected]="selectedProfile === roleData.roleName">
+                                                {{roleData.roleName}}
+                                            </option>
+                                        </select> -->
+                                        <mat-form-field class="form-field" appearance="outline">
+                                            <mat-label>Roles</mat-label>
+                                            <mat-select name="roles" #roless="ngModel" [(ngModel)]="userRole" multiple>
+                                                <mat-option *ngFor="let role of roles" [value]="role">
+                                                    {{role.roleName}}
+                                                </mat-option>
+                                            </mat-select>
+                                        </mat-form-field>
+                                    </div>
+                                    <div class="">
+                                        <button type="submit" class="w-100" mat-raised-button color="primary">Update Profile</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
