--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .badge-info {
     color: #fff;
-    background-color: #6052e2;
+    background-color: #6052e2 !important;
     letter-spacing: 1px;
 }
