commit for remove  validation in course component

--- a/src/app/page/course/course.component.html
+++ b/src/app/page/course/course.component.html
@@ -44,11 +44,11 @@
                                             </mat-option>
                                         </mat-select>
                                     </mat-form-field>
-                                    <div *ngIf="authorId.touched && authorId.invalid" class="alert alert-danger">
+                                    <!-- <div *ngIf="authorId.touched && authorId.invalid" class="alert alert-danger">
                                         <div *ngIf="authorId.errors?.['required']">
                                             Author must be selected
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div>
                                     <mat-form-field class="form-field" appearance="outline">
@@ -60,11 +60,11 @@
                                             </mat-option>
                                         </mat-select>
                                     </mat-form-field>
-                                    <div *ngIf="mentorId.touched && mentorId.invalid" class="alert alert-danger">
+                                    <!-- <div *ngIf="mentorId.touched && mentorId.invalid" class="alert alert-danger">
                                         <div *ngIf="mentorId.errors?.['required']">
                                             Mentor must be selected
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="example-button-row">
                                     <button type="submit" class="btn btn-block" mat-raised-button color="primary">Add Course</button>
