--- a/src/assets/sass/_header.scss
+++ b/src/assets/sass/_header.scss
@@ -1,9 +1,10 @@
 .header_component {
     background-color: #fff;
     padding: 10px 15px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    // display: flex;
+    // justify-content: space-between;
+    // align-items: center;
+    width: 100%;
     margin-bottom: 30px;
     box-shadow: 0 12px 23px 0 hsl(0deg 0% 44% / 4%);
     border-bottom: 1px solid #dcdcdc;
