--- a/src/app/page/course/course.component.html
+++ b/src/app/page/course/course.component.html
@@ -1,10 +1,8 @@
-<div class="main_wapper">
-    <app-side-menu class="side_menu"></app-side-menu>
-    <div class="inner_container profile_component">
-    <app-top-header class="header_component"></app-top-header>
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-10 card pb-3">
+<div class="profile_component">
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+            <div class="col-md-10">
+                <div class="card p-3">
                     <div class="card-header-danger">
                         <h4 class="mb-1">Add New Course</h4>
                     </div>
@@ -74,6 +72,7 @@
                         
                     </form>
                 </div>
+                
             </div>
         </div>
     </div>
