--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,144 +1,138 @@
-<div class="main_wapper">
-   <app-side-menu class="side_menu"></app-side-menu>
-   <div class="inner_container">
-      <app-top-header class="header_component"></app-top-header>
-      
-      <div class="dashboard_top_box container-fluid">
-         <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6">
-               <div class="card card-stats">
-                  <div class="card-header card-header-warning card-header-icon">
-                     <div class="card-icon">
-                        <i class="material-icons">content_copy</i>
-                     </div>
-                     <p class="card-category">Total Courses</p>
-                     <h3 class="card-title">{{numberOfCourses}}</h3>
+<section>
+   <div class="dashboard_top_box container-fluid">
+      <div class="row">
+         <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="card card-stats">
+               <div class="card-header card-header-warning card-header-icon">
+                  <div class="card-icon">
+                     <i class="material-icons">content_copy</i>
                   </div>
-                  <div class="card-footer">
-                     <div class="stats">
-                        <i class="material-icons">date_range</i>
-                        Last 24 Hours
-                     </div>
-                  </div>
+                  <p class="card-category">Total Courses</p>
+                  <h3 class="card-title">{{numberOfCourses}}</h3>
                </div>
-            </div>
-
-            <div class="col-lg-3 col-md-6 col-sm-6">
-               <div class="card card-stats">
-                  <div class="card-header card-header-s card-header-icon">
-                     <div class="card-icon">
-                        <i class="material-icons">store</i>
-                     </div>
-                     <p class="card-category">Total Users</p>
-                     <h3 class="card-title">{{numberOfUsers}}</h3>
-                  </div>
-                  <div class="card-footer">
-                     <div class="stats">
-                        <i class="material-icons">date_range</i>
-                        Last 24 Hours
-                     </div>
-                  </div>
-               </div>
-            </div>
-
-            <div class="col-lg-3 col-md-6 col-sm-6">
-               <div class="card card-stats">
-                  <div class="card-header card-header-d card-header-icon">
-                     <div class="card-icon"><i class="material-icons">info_outline</i></div>
-                     <p class="card-category">Total Authors</p>
-                     <h3 class="card-title">{{numberOfAuthors}}</h3>
-                  </div>
-                  <div class="card-footer">
-                     <div class="stats"><i class="material-icons">local_offer</i> Tracked from Github </div>
-                  </div>
-               </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-               <div class="card card-stats">
-                  <div class="card-header card-header-i card-header-icon">
-                     <div class="card-icon"><i class="material-icons">update</i></div>
-                     <p class="card-category">Total Trainee</p>
-                     <h3 class="card-title">{{numberOfTrainee}}</h3>
-                  </div>
-                  <div class="card-footer">
-                     <div class="stats"><i class="material-icons">update</i> Just Updated </div>
+               <div class="card-footer">
+                  <div class="stats">
+                     <i class="material-icons">date_range</i>
+                     Last 24 Hours
                   </div>
                </div>
             </div>
          </div>
-      </div>
-      
-      <div class="container-fluid dashboard_table mt-5">
-         <div class="row">
-            <div class="col-md-6">
-               <div class="card p-3">
-                  <div echarts [options]="gradientChart" class="demo-chart"></div>
-               </div>
-            </div>
-            <div class="col-lg-6 col-md-12">
-               <div class="card p-3">
-                  <div echarts [options]="Round" class="demo-chart"></div>
-               </div>
-            </div>
-            <div class="col-lg-12 mt-5 col-md-12">
-               <div class="card">
-                  <div class="card-header card-header-warning">
-                     <h4 class="card-title">Users Stats</h4>
-                     <p class="card-category">New Users on 15th September, 2022</p>
-                  </div>
-                  <div class="card-body table-responsive">
-                     <table class="table table-hover">
-                        <thead class="">
-                           <th>ID</th>
-                           <th>Firstname</th>
-                           <th>Lastname</th>
-                           <th>Email</th>
-                           <th>Mobile</th>
-                        </thead>
-                        <tbody>
-                           <tr>
-                              <td>1</td>
-                              <td>John</td>
-                              <td>Doe</td>
-                              <td>john@example.com</td>
-                              <td>9876543210</td>
-                           </tr>
-                           <tr>
-                              <td>2</td>
-                              <td>Mary</td>
-                              <td>Moe</td>
-                              <td>mary@example.com</td>
-                              <td>9876543210</td>
-                           </tr>
-                           <tr>
-                              <td>3</td>
-                              <td>July</td>
-                              <td>Dooley</td>
-                              <td>july@example.com</td>
-                              <td>9876543210</td>
-                           </tr>
 
-                           <tr>
-                              <td>4</td>
-                              <td>Jun</td>
-                              <td>Wooley</td>
-                              <td>Wuly@example.com</td>
-                              <td>9876543210</td>
-                           </tr>
-                           <tr>
-                              <td>5</td>
-                              <td>May</td>
-                              <td>Joy</td>
-                              <td>joy@example.com</td>
-                              <td>9876543210</td>
-                           </tr>
-                        </tbody>
-                     </table>
+         <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="card card-stats">
+               <div class="card-header card-header-s card-header-icon">
+                  <div class="card-icon">
+                     <i class="material-icons">store</i>
+                  </div>
+                  <p class="card-category">Total Users</p>
+                  <h3 class="card-title">{{numberOfUsers}}</h3>
+               </div>
+               <div class="card-footer">
+                  <div class="stats">
+                     <i class="material-icons">date_range</i>
+                     Last 24 Hours
                   </div>
                </div>
             </div>
          </div>
-      </div>
 
+         <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="card card-stats">
+               <div class="card-header card-header-d card-header-icon">
+                  <div class="card-icon"><i class="material-icons">info_outline</i></div>
+                  <p class="card-category">Total Authors</p>
+                  <h3 class="card-title">{{numberOfAuthors}}</h3>
+               </div>
+               <div class="card-footer">
+                  <div class="stats"><i class="material-icons">local_offer</i> Tracked from Github </div>
+               </div>
+            </div>
+         </div>
+         <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="card card-stats">
+               <div class="card-header card-header-i card-header-icon">
+                  <div class="card-icon"><i class="material-icons">update</i></div>
+                  <p class="card-category">Total Trainee</p>
+                  <h3 class="card-title">{{numberOfTrainee}}</h3>
+               </div>
+               <div class="card-footer">
+                  <div class="stats"><i class="material-icons">update</i> Just Updated </div>
+               </div>
+            </div>
+         </div>
+      </div>
    </div>
-</div>
+   
+   <div class="container-fluid dashboard_table mt-5">
+      <div class="row">
+         <div class="col-lg-6 col-md-12">
+            <div class="card p-3">
+               <div echarts [options]="gradientChart" class="demo-chart"></div>
+            </div>
+         </div>
+         <div class="col-lg-6 col-md-12">
+            <div class="card p-3">
+               <div echarts [options]="Round" class="demo-chart"></div>
+            </div>
+         </div>
+         <div class="col-lg-12 mt-5 col-md-12">
+            <div class="card">
+               <div class="card-header card-header-warning">
+                  <h4 class="card-title">Users Stats</h4>
+                  <p class="card-category">New Users on 15th September, 2022</p>
+               </div>
+               <div class="card-body table-responsive">
+                  <table class="table table-hover">
+                     <thead class="">
+                        <th>ID</th>
+                        <th>Firstname</th>
+                        <th>Lastname</th>
+                        <th>Email</th>
+                        <th>Mobile</th>
+                     </thead>
+                     <tbody>
+                        <tr>
+                           <td>1</td>
+                           <td>John</td>
+                           <td>Doe</td>
+                           <td>john@example.com</td>
+                           <td>9876543210</td>
+                        </tr>
+                        <tr>
+                           <td>2</td>
+                           <td>Mary</td>
+                           <td>Moe</td>
+                           <td>mary@example.com</td>
+                           <td>9876543210</td>
+                        </tr>
+                        <tr>
+                           <td>3</td>
+                           <td>July</td>
+                           <td>Dooley</td>
+                           <td>july@example.com</td>
+                           <td>9876543210</td>
+                        </tr>
+
+                        <tr>
+                           <td>4</td>
+                           <td>Jun</td>
+                           <td>Wooley</td>
+                           <td>Wuly@example.com</td>
+                           <td>9876543210</td>
+                        </tr>
+                        <tr>
+                           <td>5</td>
+                           <td>May</td>
+                           <td>Joy</td>
+                           <td>joy@example.com</td>
+                           <td>9876543210</td>
+                        </tr>
+                     </tbody>
+                  </table>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+</section>
