--- a/src/styles.css
+++ b/src/styles.css
@@ -53,3 +53,35 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
     top:6px !important;
 }
+
+
+#toggle {
+    /* display: none; */
+  }
+  
+  .side_menu {
+    width: 300px;
+    /* height: 100px; */
+    background-color: #2c3e50;
+    box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    transform: translate(0px, 0px);
+    transition: left 0.5s ease-in-out;
+  }
+  
+  .exit {
+    cursor: pointer;
+    font-weight: 800;
+    color: white;
+    float: right;
+    padding: 1.1rem;
+  }
+  
+  
+  
+  
+  #toggle:checked ~ .side_menu {
+    transform: translate(-309px, 0px) !important;
+    width: 0px !important;
+  }
+  
