--- a/src/app/page/trainee-list/trainee-list.component.html
+++ b/src/app/page/trainee-list/trainee-list.component.html
@@ -26,7 +26,11 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let user of users">
+                  <tr *ngFor="let user of users |  paginate:{
+                    itemsPerPage:tableSize,
+                    currentPage:page,
+                    totalItems:count
+                  }; let i = index">
                     <td>{{user.name}}</td>
                     <td>{{user.email}}</td>
                     <td>{{user.profile.toUpperCase()}}</td>
@@ -43,6 +47,11 @@
                     </td>
                   </tr>
                 </tbody>
+                <pagination-controls 
+                previousLabel="Prev"
+                nextLabel="Next"
+                (pageChange)="onTableDataChange($event)">
+              </pagination-controls>
               </table>
             </div>
           </div>
