--- a/src/app/page/perform-question/perform-question.component.html
+++ b/src/app/page/perform-question/perform-question.component.html
@@ -24,7 +24,11 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let question of questions">
+                                <tr *ngFor="let question of questions |  paginate:{
+                                    itemsPerPage:tableSize,
+                                    currentPage:page,
+                                    totalItems:count
+                                  }; let i = index">
                                     <td>{{question.id}}</td>
                                     <td><a class="navLink ml-5"
                                             [routerLink]="['/page/solveQuestion/'+question.id]">{{question.question}}</a>
@@ -32,6 +36,11 @@
                                     <td>status</td>
                                 </tr>
                             </tbody>
+                            <pagination-controls 
+                                previousLabel="Prev"
+                                nextLabel="Next"
+                                (pageChange)="onTableDataChange($event)">
+                            </pagination-controls>
                         </table>
                     </div>
                 </div>
