--- a/src/app/page/question-view/question-view.component.html
+++ b/src/app/page/question-view/question-view.component.html
@@ -31,7 +31,11 @@
                                                 </tr>
                                           </thead>
                                           <tbody>
-                                                <tr *ngFor="let question of questions">
+                                                <tr *ngFor="let question of questions |  paginate:{
+                                                      itemsPerPage:tableSize,
+                                                      currentPage:page,
+                                                      totalItems:count
+                                                    }; let i = index">
                                                       <td>{{question.id}}</td>
                                                       <!-- <td><a  class="navLink ml-5" [routerLink]="''">{{question.question}}</a></td> -->
                                                       <td>{{question.question}}</td>
@@ -50,6 +54,11 @@
                                                       </td>
                                                 </tr>
                                           </tbody>
+                                          <pagination-controls 
+                                                previousLabel="Prev"
+                                                nextLabel="Next"
+                                                (pageChange)="onTableDataChange($event)">
+                                          </pagination-controls>
                                     </table>
                               </div>
                         </div>
