--- a/src/app/page/view-course/view-course.component.html
+++ b/src/app/page/view-course/view-course.component.html
@@ -26,7 +26,11 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let course of courses">
+                  <tr *ngFor="let course of courses |  paginate:{
+                    itemsPerPage:tableSize,
+                    currentPage:page,
+                    totalItems:count
+                  }; let i = index">
                     <td>{{course.courseId}}</td>
                     <td>
                       <a class="navLink mr-1"
@@ -60,6 +64,11 @@
                     </td>
                   </tr>
                 </tbody>
+                <pagination-controls 
+                previousLabel="Prev"
+                nextLabel="Next"
+                (pageChange)="onTableDataChange($event)">
+              </pagination-controls>
               </table>
             </div>
         </div>
