--- a/src/app/page/view-users/view-users.component.html
+++ b/src/app/page/view-users/view-users.component.html
@@ -9,6 +9,9 @@
             <div class="card">
               <div class="card-header card-header-warning">
                 <div class="d-flex justify-content-between align-items-center">
+                  <nav class="navbar">
+                    <input class="form-control" type="text" name="name" [(ngModel)]="name" (ngModelChange)="search()" />
+                  </nav>
                   <h4 class="card-title mb-0 ">Users List</h4>
                   <div>
                     <a mat-raised-button [routerLink]="'/page/addUser'">Create User</a>
@@ -27,7 +30,10 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr *ngFor="let user of users">
+                    <tr *ngFor="let user of users | paginate:{
+                      itemsPerPage:5,
+                      currentPage:page
+                    };">
                       <td>{{user.name}}</td>
                       <td>{{user.email}}</td>
                       <td>{{user.profile.toUpperCase()}}</td>
@@ -52,6 +58,7 @@
                       </td>
                     </tr>
                   </tbody>
+                  <pagination-controls (pageChange)="page = $event"></pagination-controls>
                 </table>
               </div>
             </div>
