working on sub topic component

--- a/src/app/page/perform-question/perform-question.component.html
+++ b/src/app/page/perform-question/perform-question.component.html
@@ -6,7 +6,7 @@
                     <div class="d-flex justify-content-between align-items-center">
                         <h4 class="card-title mb-0">Questions List</h4>
                         <div>
-                            <a class="navLink ml-5" mat-raised-button [routerLink]="'/page/home'">Back to
+                            <a  mat-raised-button [routerLink]="'/page/home'">Back to
                                 Home</a>
                         </div>
                     </div>
