--- a/src/app/page/sub-topic/sub-topic.component.html
+++ b/src/app/page/sub-topic/sub-topic.component.html
@@ -1,30 +1,37 @@
-<div class="container">
-           <div class="row">
-               <div class="col-md-12">
-                   <h2 class="text-center">Add Sub Topic</h2>
-                   <form #topicForm="ngForm" (ngSubmit)="AddSubTopic(topicForm.value)">
-                       <mat-form-field class="form-field" appearance="outline">
-                           <mat-label>Sub Topic</mat-label>
-                           <input [(ngModel)]="subTopic.subTopicName" name="subTopicName" type="text" matInput placeholder="Enter Topic">
-                           <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-                       </mat-form-field>
-                       <mat-form-field class="form-field" appearance="outline">
-                           <mat-label>Topic</mat-label>
-                           <mat-select name="topic" [(ngModel)]="subTopic.topic">
-                               <mat-option *ngFor="let topic of topicsList"  [value]="topic">
-                                   {{topic.topicName}}
-                               </mat-option>
-                           </mat-select>
-                       </mat-form-field>
-                      
-                       <div class="container text-center">
-                           <div class="example-button-row">
-                               <button type="submit" mat-raised-button color="primary">Add SubTopic</button>
-                               <a   class="navLink ml-5" mat-raised-button color="primary"
-                                 [routerLink]="'/page/home'">Back to Home</a>
-                           </div>
-                       </div>
-                   </form>
-               </div>
-           </div>
-       </div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12 reused_table_header">
+            <div class="card p-3">
+                <div class="card-header card-header-warning ">
+                    <div class="d-flex justify-content-between align-items-center ">
+                        <h2 class="mb-0 card-title">Add Sub Topic</h2>
+                        <div>
+                            <a mat-raised-button [routerLink]="'/page/home'">Back to Home</a>
+                        </div>
+                    </div>
+                </div>
+                <form #topicForm="ngForm" class="mt-4" (ngSubmit)="AddSubTopic(topicForm.value)">
+                    <mat-form-field class="form-field" appearance="outline">
+                        <mat-label>Sub Topic</mat-label>
+                        <input [(ngModel)]="subTopic.subTopicName" name="subTopicName" type="text" matInput
+                            placeholder="Enter Topic">
+                    </mat-form-field>
+
+                    <mat-form-field class="form-field" appearance="outline">
+                        <mat-label>Topic</mat-label>
+                        <mat-select name="topic" [(ngModel)]="subTopic.topic">
+                            <mat-option *ngFor="let topic of topicsList" [value]="topic">
+                                {{topic.topicName}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+
+                    <div class="text-right">
+                        <button type="submit" class="btn " mat-raised-button color="primary">Add SubTopic</button>
+                    </div>
+                </form>
+            </div>
+
+        </div>
+    </div>
+</div>
