worked on top header user login display

--- a/src/assets/sass/_header.scss
+++ b/src/assets/sass/_header.scss
@@ -37,4 +37,57 @@
             color: #b3b0b0;
         }
     }
+      
+    .userLoginInfo{
+        margin-top: 4px;
+        padding: 9px 36px;
+        letter-spacing: .3px;
+        max-width: 300px;
+        // border: 1px solid #00d09c;
+        border: 1px solid $blue;
+        background-color: #ececf9;
+        font-size: 0.7rem;
+        border-radius: 25px;
+      }
+
+    .profile_img{
+        height: 60px;
+        border-radius: 50%;
+        border: 1px solid $blueFade;
+        padding: 7px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 60px;
+        position: relative;
+        img{
+            height: 50px;
+            border-radius: 50%;
+        }  
+    }
+    
+    .pulse{
+        width: 10px;
+        height: 10px;
+        background-color: $blue;
+        border-radius: 50%;
+        animation: pulse 1s infinite;
+        position: absolute;
+        bottom: 12px;
+        right: -4px;
+        opacity: 0.7;
+    }
+    
+    @keyframes pulse{
+        0% {
+                box-shadow: 0 0 0 6px #c8ebeb;
+        }
+        50% {
+                box-shadow: 0 0 0 10px #c8ebeb;
+        }
+        100% {
+                box-shadow: 0 0 0 12px transparent;
+        }
+    }
+    
 }
