--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -7,3 +7,4 @@ $black                  :               #000000;
 $acent                  :               #717cbe;
 $white                  :               #ffffff;
 $disabled               :               #959393;
+$blueFade               :               rgba(33, 12, 235, 28%);
