--- a/src/app/page/layout/top-header/top-header.component.html
+++ b/src/app/page/layout/top-header/top-header.component.html
@@ -33,16 +33,20 @@
     <div class="col-md-5">
         <div class="d-flex justify-content-end align-items-center">
             <div class="mr-2">
-                <mat-chip-list class="mat-chip-list-stacked" aria-label="Color selection">
+                <button class="userLoginInfo">{{role}}</button>
+                <!-- <a href="" class="upsale-button"><span>{{role}}</span></a> -->
+                <!-- <mat-chip-list class="mat-chip-list-stacked" aria-label="Color selection">
                     <mat-chip color="primary" class="text-center" selected>{{role}}</mat-chip>
-                  </mat-chip-list>
+                </mat-chip-list> -->
                 <!-- <span> {{role}}</span> -->
             </div>
             <div>
                 <button mat-button [matMenuTriggerFor]="beforeMenu">
                     <div class="profile_img">
+                        
                         <img class="" src="https://pbs.twimg.com/profile_images/1549157833224208384/SpP7D3Id_400x400.jpg"
                             alt="">
+                            <div class='pulse'></div>
                     </div>
                 </button>
                 <mat-menu #beforeMenu="matMenu" xPosition="before">
