--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -42,6 +42,11 @@ a {
 
 table {
     text-align: center;
+    thead{
+        th {
+            border-top: 1px solid transparent !important;
+        }
+    }
 }
 .card {
     background-color: $white;
